--- a/product-info.html
+++ b/product-info.html
@@ -66,48 +66,32 @@
   <img src="img/login-e-mercado.png" alt="Logo derecha" class="img-fluid mt-5" style="max-height:60px;">
 </header>
 
- <div class="container my-6">
-    <div class="card-custom row">
-      <div class="col-md-6">
-        <div id="carCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="img/prod50921_1.jpg" class="d-block w-100" alt="Auto 1">
-            </div>
-            <div class="carousel-item">
-              <img src="img/prod50921_2.jpg" class="d-block w-100" alt="Auto 2">
-            </div>
-            <div class="carousel-item">
-              <img src="img/prod50921_3.jpg" class="d-block w-100" alt="Auto 3">
-            </div>
-            <div class="carousel-item">
-              <img src="img/prod50921_4.jpg" class="d-block w-100" alt="Auto 3">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-          </button>
+<div class="container my-6">
+  <div class="card-custom row">
+    <div class="col-md-6">
+      <div id="carCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
+        <div class="carousel-inner">
         </div>
-      </div>
-            <div class="col-md-6">
-        <h2 class="mb-5 mt-3 ms-3 fw-bolder"> CHEVROLET ONIX JOY</h2>
 
-        <p class="ms-3 fw-normal precio-valor">US$ 13.500</p>
-        <p class="ms-3 mt-5 fw-normal cat"><strong>Categoría:</strong> Autos</p>
-        <p class="ms-3 fw-normal cat"><strong>Cantidad de vendidos:</strong> 14</p>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
+      </div>
+    </div>
+         
+            <div class="col-md-6">
+          <h1 id="product-name" class="mb-4 text-center mb-5"></h1>
+
+        <p class="ms-3 fw-normal precio-valor"strong>Precio:</strong> <span id="product-price"></span></p>
+        <p class="ms-3 mt-5 fw-normal cat"strong>Categoría:</strong> <span id="product-category"></span></p>
+        <p class="ms-3 fw-normal cat"strong>Vendidos:</strong> <span id="product-sold"></span></p>
       </div>
       <div class="col-12 mt-3 fw-normal des">
-        <h5>Descripción:</h5>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
-          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-          officia deserunt mollit anim id est laborum.
-        </p>
+        <p strong> Descripcion: </strong><span id="product-description"></span></p>
+      </div>
       </div>
     </div>
   </div>
