--- a/product-info.html
+++ b/product-info.html
@@ -17,6 +17,8 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -72,14 +74,15 @@
       </div>
     </nav>
 </head>
- <header class="d-flex justify-content-between align-items-center p-2 ">
-  <img src="img/login_Jap1.png" alt="Logo izquierda" class="img-fluid mt-2" style="max-height:70px;">
-  <img src="img/login-e-mercado.png" alt="Logo derecha" class="img-fluid mt-5" style="max-height:60px;">
+ <header class="d-flex mx-auto justify-content-between align-items-center p-2 ">
+  <img src="img/login_Jap1.png" alt="Logo izquierda" class="img-fluid mx-auto d-none d-md-block  me-4" style="max-height:70px;">
+  <img src="img/login-e-mercado.png" alt="Logo derecha" class="img-fluid mx-auto d-none d-md-block  mt-5" style="max-height:60px;">
+  <img src="img\79b3f9d10a053a652bdca58e7847d88ddbde4397.png" alt="" srcset="" class="mx-auto d-block d-md-none align-items-center" style="max-height:30vw;">
 </header>
 <div class="container my-6">
   <div class="row card-custom row ">
     <div class="col-md-6">
-      <div id="carCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
+      <div id="carCarousel" class="carousel slide mt-3 me-2" data-bs-ride="carousel">
           <div class="carousel-indicators mt-3">
              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
