--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item active cursor-active" id="autos">
       <img src="img/cars_index.jpg" class="d-block w-100 img-fit"  alt="...">
       <div class="carousel-caption  d-md-block">
         <h5>Autos</h5>
         <p>Los mejores precios en autos 0 kilómetro, de alta y media gama.</p>
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item cursor-active" id="juguetes">
       <img src="img/toys_index.jpg" class="d-block w-100 img-fit" alt="...">
       <div class="carousel-caption  d-md-block">
         <h5>Juguetes</h5>
         <p>Encuentra aquí los mejores precios para niños/as de cualquier edad.</p>
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item cursor-active" id="muebles">
       <img src="img/furniture_index.jpg" class="d-block w-100 img-fit" alt="...">
       <div class="carousel-caption  d-md-block">
         <h5>Muebles</h5>
