--- a/product-info.html
+++ b/product-info.html
@@ -114,7 +114,7 @@
     <div class="col-md-3 col-6 col-sm-6">
       <div class="card h-100 shadow-sm">
         <img src="img/car1.jpg" class="card-img-top" alt="Producto 1">
-        <div class="card-body">
+        <div class="card-body card">
           <h5 class="card-title fs-6 fs-md-5 fs-lg-4">Producto 1</h5>
           <p class="card-text fs-6 fs-md-5 fs-lg-4">Descripción breve del producto relacionado.</p>
         </div>
@@ -124,7 +124,7 @@
     <div class="col-md-3 col-6 col-sm-6">
       <div class="card h-100 shadow-lg">
         <img src="img/car2.jpg" class="card-img-top" alt="Producto 2">
-        <div class="card-body">
+        <div class="card-body card">
           <h5 class="card-title">Producto 2</h5>
           <p class="card-text">Descripción breve del producto relacionado.</p>
         </div>
@@ -134,7 +134,7 @@
     <div class="col-md-3 col-6 col-sm-6">
       <div class="card h-100 shadow-lg">
         <img src="img/car3.jpg" class="card-img-top" alt="Producto 3">
-        <div class="card-body">
+        <div class="card-body card">
           <h5 class="card-title">Producto 3</h5>
           <p class="card-text">Descripción breve del producto relacionado.</p>
         </div>
@@ -144,7 +144,7 @@
     <div class="col-md-3 col-6 col-sm-6">
       <div class="card h-100 shadow-lg">
         <img src="img/car4.jpg" class="card-img-top" alt="Producto 4">
-        <div class="card-body">
+        <div class="card-body card">
           <h5 class="card-title">Producto 4</h5>
           <p class="card-text">Descripción breve del producto relacionado.</p>
         </div>
@@ -154,8 +154,8 @@
  </div>
 
  <div class="container">
-  <div class="card mb-4 mt-5 h-100 shadow-sm">
-    <div class="row g-4 align-items-center">
+  <div class="card mb-4 mt-5 h-100 shadow-sm ">
+    <div class="row g-4 align-items-center card-custom ">
       
       <div class="col-md-2 text-center">
         <img src="img/img_perfil.png" class="img-fluid rounded-circle" alt="comentarios" style="max-width: 80px;">
@@ -198,14 +198,14 @@
 
   <div class="container">
     <div class="card mb-4 mt-1 h-100 shadow-sm">
-  <div class="row g-4">
+  <div class="row g-4 ">
     <div class="col-md-2">
-      <div class="card-body">
+      <div class="card-body ">
       <img src="img/img_perfil.png" class="img-fluid start" alt="comentarios" style="max-width: 80px;">
       </div>
     </div>
-    <div class="col-md-6">
-      <div class="card-body">
+    <div class="col-md-6 ">
+      <div class="card-body ">
         <h5 class="card-title">Person1</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
