--- a/product-info.html
+++ b/product-info.html
@@ -108,48 +108,7 @@
   </div>
 </div>
   <h3 class=" text-center mt-5 deco">Productos relacionados</h3>
-  <div class="row g-4" id="related-products">
-    
-    <div class="col-md-3 col-6 col-sm-6" >
-      <div  class="card h-100 shadow-sm" >
-        <img src="img/car1.jpg" class="card-img-top" alt="Producto 1">
-        <div class="card-body card">
-          <h5 class="card-text fs-6 fs-md-5 fs-lg-4">Producto 1</h5>
-          <p class="card-text fs-6 fs-md-5 fs-lg-4">Descripción breve del producto relacionado.</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-6 col-sm-6">
-      <div class="card h-100 shadow-lg">
-        <img src="img/car2.jpg" class="card-img-top" alt="Producto 2">
-        <div class="card-body card">
-          <h5 class="card-title">Producto 2</h5>
-          <p class="card-text">Descripción breve del producto relacionado.</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-6 col-sm-6">
-      <div class="card h-100 shadow-lg">
-        <img src="img/car3.jpg" class="card-img-top" alt="Producto 3">
-        <div class="card-body card">
-          <h5 class="card-title">Producto 3</h5>
-          <p class="card-text">Descripción breve del producto relacionado.</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3 col-6 col-sm-6">
-      <div class="card h-100 shadow-lg">
-        <img src="img/car4.jpg" class="card-img-top" alt="Producto 4">
-        <div class="card-body card">
-          <h5 class="card-title">Producto 4</h5>
-          <p class="card-text">Descripción breve del producto relacionado.</p>
-        </div>
-      </div>
-    </div>
-     </div>
+  <div class="row d-flex justify-content-center align-items-center" id="related-products">
  </div>
 
  <div class="container">
