--- a/product-info.html
+++ b/product-info.html
@@ -113,6 +113,7 @@
  </div>
 
  <div class="container">
+ <h3 class=" text-center mt-5 deco">Comentarios</h3> 
   <div class="card mb-4 mt-5 h-100 shadow-sm ">
     <div class="row g-4 align-items-center card-custom ">
       
