--- a/categories.html
+++ b/categories.html
@@ -36,6 +36,12 @@
           <ul class="navbar-nav w-100 justify-content-between">
             <li class="nav-item">
               <a class="nav-link fw-bold" href="index.html">Inicio</a>
+                  <select class="form-select" aria-label="Default select example">
+      <option selected>Open this select menu</option>
+      <option value="1"><i class="bi bi-star"></i> Star Option</option>
+      <option value="2"><i class="bi bi-heart"></i> Heart Option</option>
+      <option value="3"><i class="bi bi-gear"></i> Gear Option</option>
+    </select>
             </li>
             <li class="nav-item">
               <a class="nav-link fw-bold" href="categories.html">Categorías</a>
