--- a/categories.html
+++ b/categories.html
@@ -36,12 +36,7 @@
           <ul class="navbar-nav w-100 justify-content-between">
             <li class="nav-item">
               <a class="nav-link fw-bold" href="index.html">Inicio</a>
-                  <select class="form-select" aria-label="Default select example">
-      <option selected>Open this select menu</option>
-      <option value="1"><i class="bi bi-star"></i> Star Option</option>
-      <option value="2"><i class="bi bi-heart"></i> Heart Option</option>
-      <option value="3"><i class="bi bi-gear"></i> Gear Option</option>
-    </select>
+
             </li>
             <li class="nav-item">
               <a class="nav-link fw-bold" href="categories.html">Categorías</a>
@@ -53,6 +48,8 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                 <ul class="dropdown-menu" aria-labelledby="nickname">
+                   <li><a class="dropdown-item" href="my-profile.html">configurar</a></li>
+                   <li>
                   <li><a class="dropdown-item" href="index.html" id="cerrar">Cerrar Sesion</a></li>
                    <li>
                   <select class="form-select form-select-sm" id="themeSwitch" aria-label=".form-select-sm example">
