--- a/my-profile.html
+++ b/my-profile.html
@@ -69,11 +69,12 @@
       <div class="container pb-5  tarjeta">
 
           <form>
-              <div class="image">
-                  <img src="img/img_perfil.png" alt="Profile Picture">
-              </div>
-
-
+            <div class="image">
+            <img src="img/img_perfil.png" id="profile-image" alt="Profile Picture">
+          </div>
+          <input type="file" id="file-input" accept="image/*" style="display:none">
+          <canvas id="canvas" style="display:none;"></canvas>
+             
               <div class="form-group">
                   <label for="nombre">Nombre:</label>
                   <input type="text" class="form-control"   placeholder="Enter nombre" id="nombre">
