--- a/product-info.html
+++ b/product-info.html
@@ -58,7 +58,10 @@
             </li>
              
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+              <a class="nav-link dropdown-toggle d-flex align-items-center" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+            <img src="img/img_perfil.png" id="profile-image" alt="Profile Picture" />
+              <span id="nav-username"></span>
+            </a>
                 <ul class="dropdown-menu" aria-labelledby="nickname">
                   <li><a class="dropdown-item" href="index.html" id="cerrar">Cerrar Sesion</a></li>
                    <li>
