--- a/cart.html
+++ b/cart.html
@@ -44,11 +44,12 @@
     </div>
   </nav>
   
-  <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+   <main class="pb-5">
+    <div class="text-center p-4">
+      <h2 class="fw-bold mt-4">Carrito</h2>
+    </div>
+    <div>
+      
     </div>
   </main>
   <footer class="text-muted">
