--- a/product-info.html
+++ b/product-info.html
@@ -185,6 +185,6 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
-</body>
+</body class='florboba'>
 
 </html>
