--- a/products.html
+++ b/products.html
@@ -25,7 +25,7 @@
 
   <header>
 
-    <div class="logo"><img src=\img\79b3f9d10a053a652bdca58e7847d88ddbde4397.png alt=""></div>
+    <div class="logo"><img src=\img\79b3f9d10a053a652bdca58e7847d88ddbde4397.png alt="" id="headerimg"></div>
 
       <div class="barra" id="searchForm">
          <form action="" autocomplete="on">
