--- a/product-info.html
+++ b/product-info.html
@@ -32,9 +32,9 @@
   </nav>
   </head>
   <header class="d-flex mx-auto justify-content-between align-items-center p-2 ">
-    <img src="img\login_JaP13.png" alt="Logo izquierda" class="img-fluid mx-auto d-none d-md-block  mt-5"
+    <img src="img\login_JaP13.png" name="logo" alt="Logo izquierda" class="img-fluid mx-auto d-none d-md-block  mt-5"
       style="max-height:70px;">
-    <img src="img\login-e-mercado3.png" alt="Logo derecha" class="img-fluid mx-auto d-none d-md-block  mt-5"
+    <img src="img\login-e-mercado3.png" name="logo" alt="Logo derecha" class="img-fluid mx-auto d-none d-md-block  mt-5"
       style="max-height:60px;">
     <img src="img\79b3f9d10a053a652bdca58e7847d88ddbde4397.png" alt="" srcset=""
       class="mx-auto d-block d-md-none align-items-center" style="max-height:30vw;">
