--- a/cart.html
+++ b/cart.html
@@ -56,12 +56,11 @@
         Moneda:
         <div class="btn d-inline-flex" id="moneda">
           <div class="form-check form-check-inline">
-            <input class="form-check-input" checked type="radio" name="inlineRadioOptions" id="inlineRadio1"
-              value="UYU">
+            <input class="form-check-input" checked type="radio" name="moneyRadio" id="inlineRadio1" value="UYU">
             <label class="form-check-label" for="inlineRadio1">UYU</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="USD">
+            <input class="form-check-input" type="radio" name="moneyRadio" id="inlineRadio2" value="USD">
             <label class="form-check-label" for="inlineRadio2">USD</label>
           </div>
         </div>
