--- a/categories.html
+++ b/categories.html
@@ -13,7 +13,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/stylesmenu.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/stylescategoria.css">
-  
+  <link rel="shortcut icon" href="img\favicon.ico" type="image/x-icon">
 
 </head>
 
