--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/styleslogin.css" rel="stylesheet">
-
+  <link rel="shortcut icon" href="img\favicon.ico" type="image/x-icon">
 </head>
   
  <body class="position-relative vh-100">
