--- a/my-profile.html
+++ b/my-profile.html
@@ -17,7 +17,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/stylesmenu.css" rel="stylesheet">
   <link href="css/stylemy-profile.css" rel="stylesheet">
-   
+   <link rel="shortcut icon" href="img\favicon.ico" type="image/x-icon">
 </head>
 
 <body style="margin-top: 20vh;">
