--- a/product-info.html
+++ b/product-info.html
@@ -24,7 +24,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <link href="css/stylesproduct-info.css" rel="stylesheet">
 <link href="css/stylesmenu.css" rel="stylesheet">
-
+<link rel="shortcut icon" href="img\favicon.ico" type="image/x-icon">
 </head>
 
 <body>
