--- a/sell.html
+++ b/sell.html
@@ -10,6 +10,7 @@
   <link href="css/dropzone.css" rel="stylesheet">
   <link href="css/sell.css" rel="stylesheet">
   <link href="css/stylesmenu.css" rel="stylesheet">
+  <link rel="shortcut icon" href="img\favicon.ico" type="image/x-icon">
 </head>
 
 <body>
