--- a/product-info.html
+++ b/product-info.html
@@ -114,8 +114,8 @@
     <div class="card mb-4 mt-5 h-100 shadow-sm ">
       <div class="row g-4 align-items-center card-custom ">
 
-        <div class="col-md-2 text-center">
-          <img src="img/img_perfil.png" class="img-fluid rounded-circle" alt="comentarios" style="max-width: 80px;">
+        <div class="col-md-2 text-center mb-4 border-end">
+          <img src="img/img_perfil.png" class="img-fluid rounded-circle profileImg" alt="comentarios" style="max-width: 90px; height: 90px;" >
         </div>
 
         <div class="col-md-10">
