--- a/cart.html
+++ b/cart.html
@@ -76,21 +76,21 @@
       </div>
 
       <div class="mb-3">
-        <h6 class="fw-bold">Enviar</h6>
+        <h6 class="fw-bold">Tipo de envio</h6>
 
         <div class="form-check my-2 border border-light rounded-4">
           <input class="form-check-input ms-1" type="radio" name="envio" id="retiro" value="0" checked>
-          <label class="form-check-label" for="retiro">Retirar en el local</label>
+          <label class="form-check-label" for="retiro">Premium 2 a 5 días (15%)</label>
         </div>
         
         <div class="form-check my-2 border border-light rounded-4">
           <input class="form-check-input ms-1" type="radio" name="envio" id="montevideo" value="5">
-          <label class="form-check-label" for="montevideo">Montevideo (+5%)</label>
+          <label class="form-check-label" for="montevideo">Express 5 a 8 días (7%)</label>
         </div>
 
         <div class="form-check my-2 border border-light rounded-4">
           <input class="form-check-input ms-1" type="radio" name="envio" id="interior" value="7">
-          <label class="form-check-label" for="interior">Interior del país (+7%)</label>
+          <label class="form-check-label" for="interior">Standard 12 a 15 días (5%)</label>
         </div>
       </div>
 
@@ -100,16 +100,16 @@
       </div>
 
       <div class="mb-3">
-        <h6 class="fw-bold">Pago</h6>
+        <h6 class="fw-bold">Forma de pago</h6>
 
         <div class="form-check my-2 border border-light rounded-4">
           <input class="form-check-input ms-1" type="radio" name="pago" id="tarjeta" value="0" checked>
-          <label class="form-check-label" for="tarjeta">Paga con tarjeta de crédito o débito</label>
+          <label class="form-check-label" for="tarjeta">Tarjeta de crédito</label>
         </div>
         
         <div class="form-check my-2 border border-light rounded-4">
           <input class="form-check-input ms-1" type="radio" name="pago" id="efectivo" value="5">
-          <label class="form-check-label" for="efectivo">Paga en efectivo</label>
+          <label class="form-check-label" for="efectivo">Transferencia bancaria</label>
         </div>
       </div>
 
